[gd_scene load_steps=4 format=3 uid="uid://xxxxxxxxxxxxx"]

[ext_resource type="Script" path="res://scenes/tower/tower.gd" id="1_xxxxx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxxxx"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxxxx"]
size = Vector2(64, 64)

[node name="Tower" type="Node2D"]
script = ExtResource("1_xxxxx")

[node name="Base" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.2, 0.4, 0.8, 1.0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_xxxxx")

[node name="Range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_xxxxx")

[node name="RangeIndicator" type="Node2D" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
